--- a/client/src/stylesheets/allleagues.scss
+++ b/client/src/stylesheets/allleagues.scss
@@ -14,3 +14,17 @@
   width: 100vw;
   text-align: center;
 }
+
+@media screen and (max-width: 768px) {
+  .list-table {
+    width: 50vw;
+  }
+  td, th {
+    font-size: 0.75rem;
+    padding: 0;
+  }
+  button {
+    width: fit-content;
+    padding: 0.25rem;
+  }
+}
