--- a/client/src/stylesheets/allpokemons.scss
+++ b/client/src/stylesheets/allpokemons.scss
@@ -13,7 +13,8 @@ table {
   padding: 1rem;
 }
 
-td, th {
+td,
+th {
   text-align: center;
   padding: 1rem 2rem;
 }
@@ -24,4 +25,10 @@ td, th {
   margin: 1rem 0;
   width: 100vw;
   text-align: center;
+}
+
+@media screen and (max-width: 768px) {
+  td, th {
+    padding: 0;
+  }
 }
