--- a/client/src/stylesheets/intro.scss
+++ b/client/src/stylesheets/intro.scss
@@ -23,3 +23,17 @@
   border-radius: 1rem;
   box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
 }
+
+@media screen and (max-width: 768px){
+  .home-wrapper h2 {
+    font-size: 1.5rem;
+    text-align: center;
+  }
+  .intro {
+    width: 100%;
+
+    h3 {
+      font-size: 1rem;
+    }
+  }
+}
