--- a/client/src/stylesheets/pokemoncard.scss
+++ b/client/src/stylesheets/pokemoncard.scss
@@ -39,3 +39,11 @@
   width: 100vw;
   text-align: center;
 }
+
+@media screen and (max-width: 768px) {
+  .pokemoncard-wrapper {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
+}
