--- a/client/src/stylesheets/welcome.scss
+++ b/client/src/stylesheets/welcome.scss
@@ -1,11 +1,6 @@
 .wrapper {
-  // background-image: url('../assets/images/welcome.jpg');
-  background-attachment: fixed;
-  background-size: cover;
-  background-position: center;
   height: 100vh;
   width: 100vw;
-  // font-family: "Pokemon Solid", sans-serif;
   background-color: #f3f2ef;
   display: flex;
   flex-direction: column;
@@ -13,3 +8,12 @@
   align-items: center;
 }
 
+@media screen and (max-width: 768px) {
+  .wrapper img {
+    width: 300px;
+  }
+
+  .wrapper h1 {
+    font-size: 1.5rem;
+  }
+}
